fix for overflow

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   width: 125px;
 }
 .main-container {
-  margin-top: 65px;
+  margin-top: 55px;
 }
 .default-text {
   text-decoration: none;
